--- a/popup.html
+++ b/popup.html
@@ -6,13 +6,15 @@
 	<style type="text/css">
 		body {
 			min-width: 320px;
+            min-height: 489px;
 			font-size: 0.8em;
 		}
 		tr.done {
 			text-decoration: line-through;
 		}
 		#button-new {
-			position: relative;
+			position: absolute;
+            bottom: 0;
 		}
 		#text-new {
 			position: absolute;
@@ -20,11 +22,45 @@
 			left: 0px;
 			display: none;
 		}
+        #pagination {
+            position: absolute;
+            width: 100%;
+            margin: 0 auto;
+            bottom: 30px;
+            
+        }
 		div.table-row {
 			padding-left: 20px;
 		}
 		tr.heading {
 		}
+        #new-input {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            text-align: center;
+            background: url(../img/input-bg.png) repeat transparent;
+            display: none;
+        }
+        #new-input .inner {
+            width: 250px;
+            margin: auto;
+            position: relative;
+            top: 40%;
+            padding: 10px;
+            background: white;
+            border: 3px solid #EEE;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px #333;
+        }
+        tr.row-note:hover td, .table-striped tbody tr:nth-child(odd):hover td{
+            background-color: #ADD8E6;
+        }
+        a, td {
+            transition: all .2s linear;
+            -webkit-transition: all .2s linear;
+        }
 	</style>
 </head>
 <body>
@@ -32,7 +68,7 @@
 		<table class="table table-striped" id="tbl-notes">
 		</table>	 
 	</div>
-	<div class="pagination pagination-centered pagination-mini">
+	<div class="pagination pagination-centered pagination-mini" id="pagination">
 	  <ul>
 		<li class="prev"><a href="#">Prev</a></li>
 		<li class="next"><a href="#">Next</a></li>
@@ -42,7 +78,12 @@
 	<a class="btn btn-block" href="#" id="button-new"><i class="icon-pencil"></i>
 		<input type="text" id="text-new" placeholder="Type something…">
 	</a>
-		
+	<div id="new-input">
+        <div class="inner">
+            <button class="close" id="input-close-btn">&times;</button>
+            <textarea></textarea>
+        </div>
+    </div>	
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/localstoragedb.min.js"></script>
